# linked-list

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.md  COPYRIGHT.txt  LICENSE.md  LICENSE.txt  LinkedList.tpp  README.md  main.cpp  test.cpp  test.h  test.hpp  test_types.cpp
img/: list_layout.dia  list_layout.xcf  list_layout2.dia  node_layout.dia  node_layout.xcf
include/: Config.h  Config.hpp  List.h  List.hpp  Node.h  Node.hpp
template/: List.tpp  Node.tpp
test/: test_list.cpp  test_node_bool.cpp  test_node_char.cpp  test_node_float.cpp  test_node_int.cpp  test_node_string.cpp  test_types.cpp  test_types.h
